# commiTUI

./: Cargo.toml  README.md  commitui.toml
src/: README.md  config.rs  git.rs  main.rs  state.rs  tui.rs  validation.rs
