[package]
name = "commiTUI"
version = "0.1.0"
edition = "2021"
authors = ["Ishaaq Suffyan ishaaq.suffyan@gmail.com"]
description = "A TUI for greater commit messages"
repository = "https://github.com/ishaaqsuffyan/commiTUI"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["git", "commit", "tui", "cli"]
license = "GPL-3.0-only"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tempfile = "3"
dirs = "5"
